# inf-vs-zombies

./: .gitignore  CMakeLists.txt  README.md
include/: buttons.h  clock.h  game.h  mainmenu.h  map.h  plants.h  plantsbar.h  structs.h  table.h  textures.h  zombies.h
src/: buttons.c  clock.c  main.c  mainmenu.c  map.c  plants.c  plantsbar.c  table.c  textures.c  zombies.c
